Fix css bugs on mobile cal widge

--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -336,10 +336,6 @@ span.logo svg path,
     }
     height: 5rem;
   }
-
-  .nav-label-primary div span i {
-    line-height: 3rem;
-  }
 }
 
 @media (min-width: 1340px) {
