--- a/client/src/assets/styles/components/typography.pcss
+++ b/client/src/assets/styles/components/typography.pcss
@@ -51,7 +51,7 @@ section > h2:first-of-type {
 .responsive-nav-group > a {
   font-family: Nunito, Silka, sans-serif;
   font-weight: 700;
-  @apply leading-tight uppercase text-balance-pshades-light text-xl tracking-wide;
+  @apply leading-tight uppercase text-balance-pshades-light text-base md:text-xl tracking-wide;
 }
 
 .responsive-nav-group > h2 {
@@ -70,6 +70,7 @@ section > h2:first-of-type,
 .nav-label-primary div span i {
   /* Date Picker arrows */
   @apply text-base lg:text-2xl mt-2;
+  line-height: 2.2rem;
 }
 
 .user-nav-label span {
